# signatory

./: .gitattributes  .gitignore  CHANGELOG.txt  CMakeLists.txt  INSTALLATIONGUIDEMACOS.md  MANIFEST.in  Makefile  README.md  README.rst  command.py  genreadme.py  main.cpp  metadata.py  pybind.cpp  setup.py
.github/: CONTRIBUTING.md
benchmark/: benchmark.py  helpers.py  memory.py  time_.py
docs/: acknowledgements.rst  citation.rst  conf.py  faq.rst  genreadme.py  index.rst  installation.rst  py2annotate.py  requirements.txt  title.rst
examples/: example1.py  example2.py  example3.py
installer/: MANIFEST.in  README.rst  command.py  setup.py
src/: bind.cpp  extension.hpp  free_lie_algebra_ops.cpp  free_lie_algebra_ops.hpp  free_lie_algebra_ops.inl  logsignature.cpp  logsignature.hpp  lyndon.cpp  lyndon.hpp  misc.cpp  misc.hpp  misc.inl  parallel_for.cpp  parallel_for.hpp  pycapsule.hpp  pycapsule.inl  pytorchbind.cpp  signature.cpp  signature.hpp  signature_old.cpp  signature_old.hpp  tensor_algebra_ops.cpp  tensor_algebra_ops.hpp  tensor_algebra_ops.inl  test.cpp  test.hpp  utilities.cpp  utilities.hpp
test/: atest_speed.py  benchmark.py  compatibility.py  conftest.py  example1.py  example2.py  example3.py  runner.py  speed_comparison.py  test_accuracy.py  test_arguments.py  test_basic.py  test_examples.py  test_gradient.py  test_logsignature.py  test_memory.py  test_path.py  test_signature.py  test_signature_combine.py  test_signature_inversion.py  test_signature_to_logsignature.py  test_speed.py  test_utility.py  utils.py  utils_testing.py
test2/: helpers.py  (+8 more)
(+122 files in other folders)
